@@ -1,4 +1,4 @@
-$Id: History,v 1.40 2001-10-11 04:54:24 asaim Exp $
+$Id: History,v 1.41 2001-10-11 13:44:36 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,12 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Oct 11, 2001 G.Cosmo (run-V03-02-05)
+- Replaced inclusion of ctoken.h with G4Tokenizer.hh in
+  G4UserPhysicsListMessenger.cc.
+- Co-works with tag "globals-V03-02-03" where the STLInterface
+  module has been removed.
 
 Oct 10, 2001 M.Asai (run-V03-02-04)
 - Add an option to store random number engine status for BOTH
